fixed the link on the dedication page to not point back to the book preview but rather to a pay message

--- a/public/partials/pfpreview_3.html
+++ b/public/partials/pfpreview_3.html
@@ -56,7 +56,7 @@
             </li>
         </ul>
         <div class="w-col-md-4">
-            <a target="_self" href="" ng-click="main.submitPreview()" class="footer-btn">Buy the Book</a>
+            <a target="_self" href="javascript:alert('This will be linked to payment')" ng-click="alert('This will be linked to payment')" class="footer-btn">Buy the Book</a>
         </div>
     </div>
 </section><!-- end id:bottomPartWrapper -->
