fixes a small css bug with the page shifting slightly whenever scrollbar appears on tab content

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -276,6 +276,9 @@ body {
   overflow-x: hidden;
   overflow-y: scroll; }
 
+.tab-content {
+  overflow-y: hidden; }
+
 #tabs > ul, #tabs > .tab-pane-style {
   float: left;
   width: 80%; }
