--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -170,6 +170,11 @@ body{
     overflow-x: hidden;
     overflow-y: scroll;
 }
+
+.tab-content {
+    overflow-y: hidden;
+}
+
 #tabs > ul,#tabs > .tab-pane-style {
     float: left;
     width:80%;
