changed the family preview image to the line image, changed the controller for preview view one to Preview controller, fixed the  injection, added a boolean flag to check for preview image load status, added a varialbe to hold the preview image folder name, added a second  call in the controller to retrieve the preview folder name

--- a/public/partials/pfpreview_1.html
+++ b/public/partials/pfpreview_1.html
@@ -16,7 +16,7 @@
             <a href="javascript:void(0);"><img src="/img/social_rss.png" alt="" /></a>
             <a href="javascript:void(0);"><img src="/img/social_download.png" alt="" /></a>
         </div>
-        <div class="character-all-photo"><img src="/img/family.png" alt="" /></div>
+        <div class="character-all-photo"><img ng-src="{{'https://pfstories.com/preview' + '/' + preview.previewFolderName + '/PREVIEW.PNG'}}" src=""></div>
     </div>
 </div>
 
@@ -43,7 +43,7 @@
             </li>
         </ul>
         <div class="w-col-md-4">
-            <a target="_self" ng-click="main.submitPreview()" href="" class="footer-btn">Continue</a>
+            <a target="_self" ng-click="preview.submitPreview()" href="" class="footer-btn">Continue</a>
 <!--             <a href="javascript:void(0);" class="skip-btn">SKIP TO PREVIEW THE BOOK</a> -->
         </div>
     </div>
