connected price and currency to payment form. Make payment form conditioned on currency and price retrieval via ng-if (set appropriate flags)

--- a/public/partials/pfpreview_3.html
+++ b/public/partials/pfpreview_3.html
@@ -57,11 +57,12 @@
         </ul>
         <div class="w-col-md-4">
 <!--             <a target="_self" href="javascript:alert('This will be linked to payment')" ng-click="alert('This will be linked to payment')" class="footer-btn">Buy the Book</a> -->
-  <form action="/charge" method="POST">
+  <form ng-if="preview.priceandcurrencyloaded" action="/charge" method="POST">
 <script
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="pk_test_9ivWptW7MxIEijAidlMGhOta"
-  data-amount="2000"
+  data-amount="{{preview.price}}"
+  data-currency="{{preview.currency}}"
   data-name="Family Stories"
   data-description="Custom Book"
   data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
