--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -24,6 +24,9 @@
 
     <div class="character-wrapper container">
         <!--added div-->
+        <div class="loading-overlay">
+            <h1 class="loading-message">LOADING...</h1>
+        </div>
         <div class="tab-wrapper">
             <!-- start tab section -->
             <section id="tabs">
