--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,7 +172,7 @@ body {
   left: 0px;
   top: 0px;
   z-index: 550;
-  background-color: rgba(0, 255, 0, 0.4); }
+  background-color: lime; }
 
 .loading-message {
   position: absolute;
