--- a/public/css/main.css
+++ b/public/css/main.css
@@ -278,7 +278,8 @@ body {
 
 .tab-content {
   overflow-y: scroll;
-  max-height: 535px; }
+  max-height: 535px;
+  height: 535px; }
 
 #tabs > ul, #tabs > .tab-pane-style {
   float: left;
