--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -174,6 +174,7 @@ body{
 .tab-content {
     overflow-y: scroll;
     max-height: 535px;
+    height: 535px;
 }
 
 #tabs > ul,#tabs > .tab-pane-style {
