--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,6 +6,10 @@ $lgray: #f5f5f5;
 $mgray: #969696;
 $dgray: #333;
 
+.hide-overflow {
+    overflow: hidden;
+}
+
 // Gallery Image Size
 $img: 124px;
 
