--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700);
+.hide-overflow {
+  overflow: hidden; }
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
