--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700);
 .hide-overflow {
-  overflow: hidden; }
+  overflow: scroll; }
 
 * {
   -webkit-box-sizing: border-box;
