--- a/public/css/main.css
+++ b/public/css/main.css
@@ -642,25 +642,28 @@ input#avatar-name-input {
   position: relative; }
 
 #slider .prev-btn, #slider .next-btn {
-  display: inline-block;
-  height: 60px;
+  display: block;
+  height: 60%;
+  width: 60%;
   position: absolute;
-  top: 47%;
-  width: 31px; }
+  top: 15%;
+  z-index: 50; }
 
-#slider .next-btn {
-  background: url(/img/right_arrow.png) no-repeat center; }
-
-#slider .next-btn.inactive {
-  background: url(/img/right_arrow_inactive.png) no-repeat center;
-  cursor: not-allowed; }
+.avatar-image-bundle img {
+  z-index: 100; }
 
 #slider .prev-btn {
-  background: url(/img/left_arrow.png) no-repeat center; }
+  left: 0; }
+  #slider .prev-btn img {
+    top: 0;
+    left: -26px;
+    height: 100%; }
 
-#slider .prev-btn.inactive {
-  background: url(/img/left_arrow_inactive.png) no-repeat center;
-  cursor: not-allowed; }
+#slider .next-btn {
+  right: 0; }
+  #slider .next-btn img {
+    top: 0;
+    height: 100%; }
 
 .salutation-wrapper {
   color: #3c7c99;
@@ -1311,6 +1314,9 @@ input[type="radio"]:checked + label.color-thumb {
   position: absolute;
   top: 18%;
   width: 95%; }
+
+.q-circle.big {
+  z-index: 150; }
 
 @media (max-width: 670px) {
   .message-page .page {
