--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -583,27 +583,50 @@ input#avatar-name-input {
     position:relative;
 }
 #slider .prev-btn, #slider .next-btn{
-    display: inline-block;
-    height: 60px;
+    display: block;
+    height: 60%;
+    width: 60%;
     position: absolute;
-    top: 47%;
-    width: 31px;
+    top: 15%;
+    z-index: 50;
+
+}
+
+.avatar-image-bundle img {
+    z-index: 100;
+}
+
+#slider .prev-btn {
+    left: 0;
+    img {
+        top: 0;
+        left: -26px;
+        height: 100%;
+    }
 }
 
 #slider .next-btn {
-    background:url(/img/right_arrow.png) no-repeat center;
+    right: 0;
+    img {
+        top: 0;
+        height: 100%;
+    }
 }
-#slider .next-btn.inactive {
-    background:url(/img/right_arrow_inactive.png) no-repeat center;
-    cursor:not-allowed;
-}
-#slider .prev-btn {
-    background:url(/img/left_arrow.png) no-repeat center;
-}
-#slider .prev-btn.inactive {
-    background:url(/img/left_arrow_inactive.png) no-repeat center;
-    cursor:not-allowed;
-}
+
+// #slider .next-btn {
+//     background:url(/img/right_arrow.png) no-repeat center;
+// }
+// #slider .next-btn.inactive {
+//     background:url(/img/right_arrow_inactive.png) no-repeat center;
+//     cursor:not-allowed;
+// }
+// #slider .prev-btn {
+//     background:url(/img/left_arrow.png) no-repeat center;
+// }
+// #slider .prev-btn.inactive {
+//     background:url(/img/left_arrow_inactive.png) no-repeat center;
+//     cursor:not-allowed;
+// }
 
 .salutation-wrapper{
     color:#3c7c99;
@@ -1413,6 +1436,10 @@ font-size:20px;
     position: absolute;
     top: 18%;
     width: 95%;
+}
+
+.q-circle.big {
+    z-index: 150;
 }
 
 @media (max-width: 670px){
