--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1358,4 +1358,5 @@ input[type="radio"]:checked + label.color-thumb {
   top: 200px; }
 
 .carousel3.ng-scope {
-  width: 300px; }
+  width: 300px;
+  height: 500px; }
