--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -50,6 +50,7 @@ $rubik: 'Rubik', sans-serif;
 @import "fixes.scss";
 @import "common.scss";
 @import "site.scss";
+@import "kario_css.scss"
 
 body{
     background-color:#eceadd;
