--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2236,7 +2236,7 @@ input[type="radio"]:checked + label.color-thumb {
 /*media queries*/
 @media screen and (max-width: 1000px), screen and (max-height: 767px) {
   #bottomPartWrapper {
-    position: relative;
+    position: fixed;
     height: auto; }
   #bottomPartWrapper > .container {
     padding-bottom: 10px; } }
