--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -852,7 +852,7 @@ input[type="radio"]:checked + label.color-thumb {
 /*media queries*/
 @media screen and (max-width: 1000px) , screen and (max-height: 767px) {
     #bottomPartWrapper {
-    position: relative;
+    position: fixed;
     height:auto;
     }
      #bottomPartWrapper > .container {
