Tweaked positioning on slider to work more intuitively

--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -42,7 +42,7 @@
 				#tabs {
 					ul {
 						width: 100% !important; 
-						li { float: left; }
+						li { min-width: 75px}
 					}
 				}
 			}
