--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1674,7 +1674,18 @@ header .user-avatar img {
   .character-wrapper .tab-wrapper #tabs ul {
     width: 100% !important; }
     .character-wrapper .tab-wrapper #tabs ul li {
-      min-width: 75px; } }
+      min-width: 75px; }
+  .character-wrapper .tab-wrapper #tabs .tab-pane-style {
+    width: 100%; }
+  .character-wrapper .tab-wrapper #tabs .tab-content {
+    width: 100% !important;
+    float: left; }
+    .character-wrapper .tab-wrapper #tabs .tab-content .color-thumbs {
+      width: 70px;
+      border-right: 1px solid;
+      float: left; }
+    .character-wrapper .tab-wrapper #tabs .tab-content .ng-scope {
+      float: left; } }
 
 body {
   background-color: #eceadd; }
