--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -40,9 +40,16 @@
 			.tab-wrapper {
 			
 				#tabs {
+
 					ul {
 						width: 100% !important; 
 						li { min-width: 75px}
+					}
+					.tab-pane-style { width: 100%; }
+					.tab-content { 
+						width: 100% !important; float: left; 
+						.color-thumbs { width: 70px; border-right: 1px solid; float: left; }
+						.ng-scope { float: left;  }
 					}
 				}
 			}
