--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1652,21 +1652,31 @@ header .user-avatar img {
   pointer-events: none; }
 
 @media (max-width: 749px) {
-  .character-wrapper .tab-wrapper #tabs ul {
-    width: 100% !important; }
-    .character-wrapper .tab-wrapper #tabs ul li {
-      min-width: 75px; }
-  .character-wrapper .tab-wrapper #tabs .tab-pane-style {
-    width: 100%; }
-  .character-wrapper .tab-wrapper #tabs .tab-content {
-    width: 100% !important;
-    float: left; }
-    .character-wrapper .tab-wrapper #tabs .tab-content .color-thumbs {
-      width: 70px;
-      border-right: 1px solid;
+  .character-wrapper .tab-wrapper #tabs {
+    height: 290px;
+    overflow: visible; }
+    .character-wrapper .tab-wrapper #tabs ul {
+      width: 100% !important; }
+      .character-wrapper .tab-wrapper #tabs ul li {
+        min-width: 75px; }
+    .character-wrapper .tab-wrapper #tabs .tab-pane-style {
+      width: 100%; }
+    .character-wrapper .tab-wrapper #tabs .tab-content {
+      width: 100% !important;
       float: left; }
-    .character-wrapper .tab-wrapper #tabs .tab-content .ng-scope {
-      float: left; } }
+      .character-wrapper .tab-wrapper #tabs .tab-content .color-thumbs {
+        width: 70px;
+        border-right: 1px solid;
+        float: left; }
+      .character-wrapper .tab-wrapper #tabs .tab-content .ng-scope {
+        float: left; }
+  #slider {
+    margin-top: 130px !important;
+    pointer-events: none; }
+    #slider img:first-child {
+      position: absolute !important; }
+    #slider .rn-carousel-control {
+      pointer-events: all; } }
 
 body {
   background-color: #eceadd; }
