--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -51,8 +51,8 @@ src="https://www.facebook.com/tr?id=181237689004618&ev=PageView&noscript=1"
             <section id="tabs">
                 <!-- tabs : this structure might change depending on the tab component used-->
                 <!-- tab menu -->
-                <ul>
-                    <li class="active"><a target="_self" href="#nameGender" data-toggle="tab">Name and Gender</a></li>
+                <ul id="avatar_slider">
+                    <li class="active deleteme" id="nameGenderTab"><a target="_self" href="#nameGender" data-toggle="tab">Name and Gender</a></li>
 
                     <!-- MGS: the tab li elements (or whatever element they will get changed to will dynamically repeat based on the information retrieved from the database). I have commented out all but the first LI to demonstrate that -->
                     <li ng-repeat="property in main.schema"><a target="_self" ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
