--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -34,7 +34,7 @@
 
 	//Character Tab Styles
 	@media (max-width: 749px){ 
-		
+		.mobile_hide { visibility: hidden; }
 		.character-wrapper {
 
 			.tab-wrapper {
