--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -31,10 +31,17 @@
 		.slider-txt-container { pointer-events: none; }
 	}
 
+	@media (min-width: 750px) {
+		.desk_hide { display: none; }
+	}
+
 
 	//Character Tab Styles
 	@media (max-width: 749px){ 
 		.mobile_hide { visibility: hidden; }
+		.mobile_display { display: none; }
+		.color_drop {  cursor: pointer; width: 50px; height: 50px; border-radius: 50%; margin: 10px; }
+		.color_wrapper { float: left; width: 80px; }
 		.character-wrapper {
 
 			.tab-wrapper {
