Fixed loaidng of colors not working with slick slider for multiple body parts

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1692,6 +1692,9 @@ header .user-avatar img {
         width: 70px;
         border-right: 1px solid;
         float: left; }
+      .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
+        width: 50vw;
+        float: left; }
       .character-wrapper .tab-wrapper #tabs .tab-content .ng-scope {
         float: left; }
   #slider {
