--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -56,6 +56,7 @@
 					.tab-content { 
 						width: 100% !important; float: left; 
 						.color-thumbs { width: 70px; border-right: 1px solid; float: left; }
+						.img_wrapper { width: 50vw; float: left; }
 						.ng-scope { float: left;  }
 					}
 				}
