Added space between items on visual avatar limbs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1695,6 +1695,8 @@ header .user-avatar img {
       .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper {
         width: 50vw;
         float: left; }
+        .character-wrapper .tab-wrapper #tabs .tab-content .img_wrapper .slick-slide {
+          margin-right: 60px; }
       .character-wrapper .tab-wrapper #tabs .tab-content .ng-scope {
         float: left; }
   #slider {
