--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -56,7 +56,10 @@
 					.tab-content { 
 						width: 100% !important; float: left; 
 						.color-thumbs { width: 70px; border-right: 1px solid; float: left; }
-						.img_wrapper { width: 50vw; float: left; }
+						.img_wrapper { 
+							width: 50vw; float: left; 
+							.slick-slide { margin-right: 60px; }
+						}
 						.ng-scope { float: left;  }
 					}
 				}
